# Temporal-Causality-engine

./: .gitignore  CITATION.cff  CONTRIBUTING.md  METHODS.md  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: figures.md
examples/: run_benchmark.py  run_granger_example.py  run_pcmci_example.py
src/temporal_causality_engine/: benchmark.py  fdr.py  granger_module.py  pcmci_module.py  utils.py  viz.py
src/temporal_causality_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streamlit_app/: app.py
tests/: test_benchmark.py  test_fdr.py  test_granger.py  test_pcmci.py  test_stationarity.py
