[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-causality-engine"
version = "0.1.0"
description = "Causal discovery toolkit for multivariate time series"
authors = [{name = "Hamza"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
